--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,27 +1,42 @@
-# nginx/default.conf
+# Определяем upstream для Gunicorn (имя сервиса из docker-compose)
+upstream django_server {
+    server web:8000;
+}
 
 server {
+    # Nginx слушает порт 80 внутри контейнера
     listen 80;
-    server_name 127.0.0.1;
+    # Укажите ваш домен, если есть
+    # server_name yourdomain.com www.yourdomain.com;
+    charset utf-8;
 
-    # Настройка для статических файлов
-    location /static/ {
-        alias /app/staticfiles/;
-        expires 30d;
-    }
+    # Максимальный размер тела запроса (для загрузки файлов)
+    client_max_body_size 75M;
 
-    # Настройка для медиа-файлов
+    # Раздача медиафайлов из volume
     location /media/ {
+        # Путь внутри контейнера Nginx, куда смонтирован volume media_volume
         alias /app/media/;
         expires 30d;
+        add_header Pragma public;
+        add_header Cache-Control "public";
     }
 
-    # Проксирование запросов на Django
+    # Раздача статических файлов из volume
+    location /static/ {
+        # Путь внутри контейнера Nginx, куда смонтирован volume static_volume
+        alias /app/staticfiles/;
+        expires 30d;
+        add_header Pragma public;
+        add_header Cache-Control "public";
+    }
+
+    # Проксирование всех остальных запросов к Gunicorn/Django
     location / {
-        proxy_pass http://web:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_pass http://django_server;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $host; # Важно для Django ALLOWED_HOSTS
+        proxy_redirect off;
     }
 }
