--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-# docker-compose.yml
-
-version: '3.8'
+# Содержимое из вашего пункта 4
+# Переименован env_file на .env
+# Добавлено имя контейнера web
 
 services:
-  # Сервис Django с Gunicorn
   web:
     build: .
+    container_name: itg_django_web # Добавлено имя контейнера
     restart: always
     volumes:
       - .:/app
@@ -14,36 +14,50 @@ services:
     expose:
       - 8000
     depends_on:
-      - db
+      db:
+        # Добавим healthcheck зависимость для надежности
+        condition: service_healthy
     env_file:
-      - .env.docker
+      - .env # Используем .env по умолчанию
     networks:
       - app-network
 
-  # Сервис PostgreSQL
   db:
-    image: postgres:13
+    image: postgres:13 # Или postgres:15
+    container_name: itg_postgres_db
     restart: always
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+      - ./postgresql/init-scripts:/docker-entrypoint-initdb.d
     env_file:
-      - .env.docker
+      - .env # Оставляем env_file для других переменных, если они есть
     environment:
-      - POSTGRES_PASSWORD=${PG_PASSWORD}
-      - POSTGRES_USER=${PG_USER}
-      - POSTGRES_DB=${PG_NAME}
+      # <<< --- Добавьте или раскомментируйте эти три строки --- >>>
+      POSTGRES_PASSWORD: ${PG_PASSWORD}
+      POSTGRES_USER: ${PG_USER}
+      POSTGRES_DB: ${PG_NAME}
+      # <<< ----------------------------------------------------- >>>
+      POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --lc-collate=C --lc-ctype=C"
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
-  # Сервис Nginx для раздачи статики
   nginx:
-    image: nginx:1.21
+    image: nginx:1.21 # Рассмотрите более новую версию, например nginx:stable-alpine
+    container_name: itg_nginx # Добавлено имя контейнера
     restart: always
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - static_volume:/app/staticfiles
-      - media_volume:/app/media
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro # Конфиг только для чтения
+      - static_volume:/app/staticfiles:ro # Статика только для чтения
+      - media_volume:/app/media:ro # Медиа только для чтения
     ports:
+      # Пробрасываем порт 80 Nginx на порт 80 хоста
+      # Если порт 80 занят, измените левую часть, например "8080:80"
       - "80:80"
     depends_on:
       - web
@@ -52,6 +66,7 @@ services:
 
 networks:
   app-network:
+    driver: bridge
 
 volumes:
   postgres_data:
