--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ cryptography==44.0.2
 decorator==5.1.1
 defusedxml==0.7.1
 Django==5.1.6
-django-allauth==65.5.0
+django-allauth
 django-cors-headers==4.7.0
 django-debug-toolbar==5.0.1
 django-environ==0.12.0
